syntax = "proto3";

package trip;

import "model.proto";

option go_package = "./pb";

service TripService {
    rpc ListValidTrips(ListValidTripsRequest) returns (stream ListValidTripsResponse);
}

message ListValidTripsRequest {
    uint64 limit = 2;
    uint64 offset = 3;
}

message ListValidTripsResponse {
    model.TripWithTemplate trip = 1;
}
